fix mobile text letter-spacing

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -612,7 +612,7 @@ h4 {
 
 .mobile__text {
   margin-bottom: 16px;
-  letter-spacing: -0.1px;
+  letter-spacing: -0.2px;
 }
 
 .mobile__button {
