--- a/src/scss/_mobile.scss
+++ b/src/scss/_mobile.scss
@@ -22,7 +22,7 @@
   &__text {
     margin-bottom: 16px;
 
-    letter-spacing: -0.1px;
+    letter-spacing: -0.2px;
   }
 
   &__button {
